fixed selected header still clickable on mobile

--- a/src/style/mobile/header.scss
+++ b/src/style/mobile/header.scss
@@ -142,6 +142,7 @@ body.info a[route="info"],
 body.portfolio a[route="portfolio"],
 body.links a[route="links"] {
   color: $foreground-primary !important;
+  pointer-events: none !important;
 
   &:after {
     $underline-width: 20px;
